# multithreaded_solvers_application

./: .gitignore  CMakeLists.txt  CMakeLists2.txt  LICENSE.txt  MultithreadedSolversApplication.py  multithreaded_solvers_application.cpp  multithreaded_solvers_application.h
custom_cmake_modules/: FindEigen.cmake  FindUMFPACK.cmake
custom_eigen_solvers/: arpack_solver.h  feast_solver.cpp  feast_solver.h  spectra_eigenvalues_solver.h
custom_external_libraries/ARPACK/: ARmake.inc  CMakeLists.txt
custom_external_libraries/FEAST/2.1/: CMakeLists.txt  LICENSE  README  UPDATE
custom_external_libraries/FEAST/2.1/example/C-MPI/1_dense/: pdriver_cfeast_heev.c
custom_external_libraries/FEAST/2.1/example/C-MPI/2_banded/: pdriver_cfeast_hbev.c
custom_external_libraries/FEAST/2.1/example/C-MPI/3_sparse/: pdriver_cfeast_hcsrev.c
custom_external_libraries/FEAST/2.1/example/C/1_dense/: driver_cfeast_heev.c
custom_external_libraries/FEAST/2.1/example/C/2_banded/: driver_cfeast_hbev.c
custom_external_libraries/FEAST/2.1/example/C/3_sparse/: Makefile  driver_cfeast_hcsrev.c  driver_dfeast_scsrev.c
custom_external_libraries/FEAST/2.1/example/Fortran-MPI/1_dense/: pdriver_cfeast_heev.f90
custom_external_libraries/FEAST/2.1/example/Fortran-MPI/2_banded/: pdriver_cfeast_hbev.f90
custom_external_libraries/FEAST/2.1/example/Fortran-MPI/3_sparse/: pdriver_cfeast_hcsrev.f90
custom_external_libraries/FEAST/2.1/example/Fortran/1_dense/: driver_cfeast_heev.f90
custom_external_libraries/FEAST/2.1/example/Fortran/2_banded/: Makefile  driver_cfeast_hbev.f90  driver_zfeast_hbev.f90
custom_external_libraries/FEAST/2.1/example/Fortran/3_sparse/: driver_cfeast_hcsrev.f90
custom_external_libraries/FEAST/2.1/include/: feast.h  feast_sparse.h
custom_external_libraries/FEAST/2.1/src/: README  feast.f90  feast_banded.f90  feast_dense.f90  feast_nompi.f90  feast_sparse.f90  feast_sparse_new.f90  lbprim.f90  make.inc
custom_external_libraries/FEAST/2.1/utility/: README
custom_external_libraries/FEAST/2.1/utility/Fortran/: driver_feast_sparse.f90
custom_external_libraries/FEAST/2.1/utility/Fortran-MPI/: pdriver_feast_sparse.f90
custom_external_libraries/FEAST/2.1/utility/data/: cnt.in  helloworld.in  system1.in  system2.in
custom_external_libraries/HSL/: CMakeLists.txt  ddeps.f  hsl.cpp  hsl.h  mc75d.f
custom_external_libraries/SparseLib++/1.7/: CMakeLists.txt
custom_external_libraries/SparseLib++/1.7/include/: diagpre_double.h  ilupre_double.h  ilutpre_double.h  pre.h
custom_external_libraries/SparseLib++/1.7/spblas/: spmm.cc
custom_external_libraries/SparseLib++/1.7/src/: ilupre_double.cc  ilutpre_double.cc  pre.cc
custom_external_libraries/SuperLU_MT_2.2/: CMakeLists.txt
custom_external_libraries/SuperLU_MT_2.2/SRC/: dreadrb.c  pdgssvx.c  pdgstrf_init.c  pdgstrf_thread_init.c  pdsp_defs.h  pxgstrf_synch.c  sp_colorder.c  sp_ienv.c
custom_external_libraries/arpack++/include/: arcomp.h  arerror.h  arpackf.h  arsnsym.h  blas1c.h  blas1f.h
custom_linear_solvers/: bicgstab_block_pressure_solver.h  bicgstab_scaling_solver.h  bicgstab_solver.h  block_2phase_index_based_schur_solver.h  block_2phase_schur_solver.h  block_pressure_schur_solver.h  block_pressure_staggered_solver.h  chebyshev_solver.h  cudss_solver.h  deflated_cg_solver_2.h  deflated_subdomain_nodal_based_cg_solver.h  diagonal_fit_solver.h  drained_solver.h  gmres_solver.h  pardiso_solver.h  richardson_solver.h  scaling_solver2.h  superlu_mt_solver.h  umfpack_solver.h  variable_solver.h
custom_preconditioners/: block_2phase_schur_preconditioner.h  block_jacobi_nodal_based_preconditioner.h  block_jacobi_nodal_based_pressure_preconditioner.h  block_jacobi_preconditioner.h  block_jacobi_pressure_preconditioner.h  block_pressure_index_based_schur_preconditioner.h  block_pressure_preconditioner.h  block_pressure_schur_preconditioner.h  ilu0_lr_preconditioner.h  ilu_lr_preconditioner.h  iluk_preconditioner.h  ilut_lr_preconditioner.h  ilut_preconditioner.h  solver_preconditioner.h  ssor_lr_preconditioner.h  ssor_preconditioner.h
custom_processes/: system_amd_reorderer_process.h  system_boost_rcm_reorderer_process.h  system_metis_reorderer_process.h  system_rcm_reorderer_process.h
custom_python/: add_cuda_solvers_to_python.cpp  add_cuda_solvers_to_python.h  add_eigen_solvers_to_python.cpp  add_eigen_solvers_to_python.h  add_linear_solvers_to_python.cpp  add_linear_solvers_to_python.cpp.bak  add_linear_solvers_to_python.h  add_preconditioners_to_python.cpp  add_preconditioners_to_python.h  add_processes_to_python.cpp  add_processes_to_python.h  add_utilities_to_python.cpp  add_utilities_to_python.h  multithreaded_solvers_python_application.cpp
custom_utilities/: arpack_solver.cpp  arpack_solver.h  feast_solver.h  mesh_rcm.cpp  mesh_rcm.h  multithreaded_solvers_math_utils.h  pardiso_condition.h
external_includes/: condition.cpp  condition.hpp  r8lib.cpp  r8lib.hpp
external_includes/boost/numeric/bindings/traits/: config.hpp
external_includes/boost/numeric/bindings/traits/detail/.svn/: all-wcprops  entries
external_includes/iml++/: bicg.h  bicgstab.h  cg.h  cgs.h  cheby.h  gmres.h  ir.h  qmr.h
